--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 appnope==0.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
+awsebcli==3.14.9
 backcall==0.1.0
 bleach==3.1.0
+blessed==1.15.0
+botocore==1.12.81
+cached-property==1.5.1
+cement==2.8.2
 certifi==2018.11.29
 chardet==3.0.4
+colorama==0.3.9
 coverage==4.5.2
 decorator==4.3.0
 defusedxml==0.5.0
@@ -14,7 +20,11 @@ django-compressor==2.2
 django-redis==4.10.0
 django-sass-processor==0.7.2
 docker==3.7.0
+docker-compose==1.23.2
 docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.14
 entrypoints==0.3
 gunicorn==19.9.0
 idna==2.8
@@ -24,6 +34,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.4.2
 jedi==0.13.2
 Jinja2==2.10
+jmespath==0.9.3
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -40,6 +51,7 @@ numpy==1.16.0
 pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
+pathspec==0.5.5
 pexpect==4.6.0
 pickleshare==0.7.5
 pluggy==0.8.1
@@ -52,6 +64,7 @@ Pygments==2.3.1
 pytest==4.1.1
 python-dateutil==2.7.5
 pytz==2018.9
+PyYAML==3.13
 pyzmq==17.1.2
 qtconsole==4.4.3
 rcssmin==1.0.6
@@ -59,12 +72,14 @@ redis==3.0.1
 requests==2.21.0
 requirements==0.1
 rjsmin==1.0.12
-sass==2.3
+semantic-version==2.5.0
 Send2Trash==1.5.0
 six==1.12.0
 SQLAlchemy==1.2.16
+termcolor==1.1.0
 terminado==0.8.1
 testpath==0.4.2
+texttable==0.9.1
 tornado==5.1.1
 traitlets==4.3.2
 urllib3==1.24.1
