import 100 entries from csv.

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -12,6 +12,7 @@ option_settings:
     SECRET_KEY: "fa)k&x+(**=pwb9p4jv*t7t@jrv3^7eifd%$yay)om4c^t70mq"
     DEBUG: "True"
     ALLOWED_HOSTS: "127.0.0.1 0.0.0.0 localhost"
+    CACHE_URL: ""
   "aws:elasticbeanstalk:container:python":
     WSGIPath: "kickstarter/wsgi.py"
     StaticFiles: "/static/=static/"
