--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -11,8 +11,8 @@ option_settings:
     PYTHONPATH: "$PYTHONPATH"
     SECRET_KEY: "fa)k&x+(**=pwb9p4jv*t7t@jrv3^7eifd%$yay)om4c^t70mq"
     DEBUG: "True"
-    ALLOWED_HOSTS: "127.0.0.1 0.0.0.0 localhost"
-    CACHE_URL: ""
+    ALLOWED_HOSTS: "127.0.0.1 0.0.0.0 localhost ec2-54-188-32-164.us-west-2.compute.amazonaws.com"
+    CACHE_URL: "kickstarter.0fedjr.0001.usw2.cache.amazonaws.com:6379"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: "kickstarter/wsgi.py"
     StaticFiles: "/static/=static/"
