update cache endpoint

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -12,7 +12,7 @@ option_settings:
     SECRET_KEY: "fa)k&x+(**=pwb9p4jv*t7t@jrv3^7eifd%$yay)om4c^t70mq"
     DEBUG: "True"
     ALLOWED_HOSTS: "127.0.0.1 0.0.0.0 localhost ec2-54-218-182-138.us-west-2.compute.amazonaws.com"
-    CACHE_URL: "kickstarter.0fedjr.0001.usw2.cache.amazonaws.com:6379"
+    CACHE_URL: "ec2-pipeline.0fedjr.0001.usw2.cache.amazonaws.com:6379"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: "kickstarter/wsgi.py"
     StaticFiles: "/static/=static/"
